--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
       <div class="nav-center">
         <div class="nav-header">
           <div class="nav-logo">
-            <h2>prova<span class="temporary">123</span></h2>
+            <h2>Franek<span class="temporary">Dev</span></h2>
           </div>
           <div class="nav-btn">
             <i class="fa-solid fa-bars"></i>
@@ -90,12 +90,16 @@
       </div>
       <div class="section-center">
         <p class="page-text">
-          Hello, I am test test and I am a web developer. I live and work in
-          somewhere warm. I spend most of my day, experimenting with HTML, CSS
-          and JavaScript (and its endless list of frameworks). I enjoy coding
-          and the challenge of learning something new everyday. You can also
-          find me at youtube channel
-          <a class="page-link" href="">some youtube channel</a>
+          Hello, I am Francesco Leccese and I am a web developer. I live and
+          work between Italy and Poland. I spend most of my day experimenting
+          with HTML, CSS, JavaScript and its React framework. I enjoy coding and
+          the challenge of learning something new everyday. You can also find me
+          on Linkedin
+          <a
+            class="page-link"
+            href="https://https://www.linkedin.com/in/franekDev/"
+            >@FranekDev</a
+          >
         </p>
       </div>
     </header>
@@ -104,16 +108,22 @@
       <div class="footer-center">
         <ul class="sidebar-icons">
           <li class="sidebar-icon">
-            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.facebook.com//FranekDev"
+              ><i class="fa-brands fa-facebook"></i
+            ></a>
           </li>
           <li class="sidebar-icon">
-            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/franekDev"
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
           </li>
           <li class="sidebar-icon">
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.instagram.com/franekdev/"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
           </li>
         </ul>
-        <p>&copy; test test all rights reserved</p>
+        <p>&copy; FranekDev all rights reserved</p>
       </div>
     </footer>
   </body>
