--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
       <div class="nav-center">
         <div class="nav-header">
           <div class="nav-logo">
-            <h2>prova<span class="temporary">123</span></h2>
+            <h2>Franek<span class="temporary">Dev</span></h2>
           </div>
           <div class="nav-btn">
             <i class="fa-solid fa-bars"></i>
@@ -91,26 +91,36 @@
       <div class="section-center">
         <p class="page-text">
           If you are looking to get ahold of me, you can send me an email at
-          <a class="page-link" href="">@your_email</a>. You can also reach me on
-          Twitter at
-          <a class="page-link" href="">@ your_social_media</a>
+          <a class="page-link" href="mailto:franekdev86@gmail.com"
+            >franekdev86@gmail.com</a
+          >. You can also reach me on Linkedin at
+          <a class="page-link" href="https://www.linkedin.com/in/franekDev"
+            >@FranekDev</a
+          >
         </p>
       </div>
     </header>
+
     <footer class="footer">
       <div class="footer-center">
         <ul class="sidebar-icons">
           <li class="sidebar-icon">
-            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.facebook.com//FranekDev"
+              ><i class="fa-brands fa-facebook"></i
+            ></a>
           </li>
           <li class="sidebar-icon">
-            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/franekDev"
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
           </li>
           <li class="sidebar-icon">
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.instagram.com/franekdev/"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
           </li>
         </ul>
-        <p>&copy; test test all rights reserved</p>
+        <p>&copy; FranekDev all rights reserved</p>
       </div>
     </footer>
   </body>
