--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
       <div class="nav-center">
         <div class="nav-header">
           <div class="nav-logo">
-            <h2>prova<span class="temporary">123</span></h2>
+            <h2>franek<span class="temporary">Dev</span></h2>
           </div>
           <div class="nav-btn">
             <i class="fa-solid fa-bars"></i>
@@ -81,6 +81,7 @@
     </aside>
 
     <!--------------------------end of sidebar----------------------->
+
     <!--------------------------header----------------------->
 
     <header class="project-page-header section">
@@ -93,100 +94,247 @@
       <div class="section-center project-page-center">
         <article class="project-page-single">
           <div class="project-page-img">
-            <img src="./images/pic-3.jpg" alt="" class="project-page-pic" />
-            <span class="page-icon">
-              <i class="fa-solid fa-house-chimney"></i>
-            </span>
+            <img src="./images/pic1.jpg" alt="" class="project-page-pic" />
+            <a href="https://jumbo-clubs.netlify.app" target="_blank">
+              <span class="page-icon">
+                <i class="fa-solid fa-house-chimney"></i>
+              </span>
+            </a>
           </div>
           <div class="project-page-info">
-            <h4>project name</h4>
+            <h4>Jumbo Clubs</h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
-              eaque fuga distinctio reiciendis optio blanditiis non laborum
-              totam harum repudiandae.
+              Explore the
+              <i>Jumbo Clubs</i> events taking place in some of the top cities
+              of the world! A project part of my <i>"Jumbo series"</i> which
+              includes also "Coffee Blend" and "Jumbo colombian Tea". The
+              <i>"Jumbo series"</i> has been conceived for academic purposes
+              therefore is presenting products of fantasy.
             </p>
             <div class="project-page-footer">
               <i class="fa-brands fa-github"></i>
-              <p>source code</p>
+
+              <a href="https://github.com/Franek-86/jumbo_clubs">
+                source code</a
+              >
             </div>
           </div>
         </article>
         <article class="project-page-single">
           <div class="project-page-img">
-            <img src="./images/pic-3.jpg" alt="" class="project-page-pic" />
-            <span class="page-icon">
-              <i class="fa-solid fa-house-chimney"></i>
-            </span>
+            <img src="./images/pic2.jpg" alt="" class="project-page-pic" />
+            <a href="https://the-coffee-blend.netlify.app" target="_blank">
+              <span class="page-icon">
+                <i class="fa-solid fa-house-chimney"></i>
+              </span>
+            </a>
           </div>
           <div class="project-page-info">
-            <h4>project name</h4>
+            <h4>the coffee blend</h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
-              eaque fuga distinctio reiciendis optio blanditiis non laborum
-              totam harum repudiandae.
+              A project part of my <i>"Jumbo series"</i> which includes also
+              "Jumbo Clubs" and "Jumbo colombian Tea". The
+              <i>"Jumbo series"</i> has been conceived for academic purposes
+              therefore is presenting products of fantasy. Choose your favorite
+              coffee blend!
             </p>
             <div class="project-page-footer">
               <i class="fa-brands fa-github"></i>
-              <p>source code</p>
+
+              <a href="https://github.com/Franek-86/coffee_blend">
+                source code</a
+              >
             </div>
           </div>
         </article>
         <article class="project-page-single">
           <div class="project-page-img">
-            <img src="./images/pic-3.jpg" alt="" class="project-page-pic" />
-            <span class="page-icon">
-              <i class="fa-solid fa-house-chimney"></i>
-            </span>
+            <img src="./images/pic3.jpg" alt="" class="project-page-pic" />
+            <a href="https://comfy-store-sloth.netlify.app" target="_blank">
+              <span class="page-icon">
+                <i class="fa-solid fa-house-chimney"></i>
+              </span>
+            </a>
           </div>
           <div class="project-page-info">
-            <h4>project name</h4>
+            <h4>comfy slot</h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
-              eaque fuga distinctio reiciendis optio blanditiis non laborum
-              totam harum repudiandae.
+              <i>Comfy Slot</i> is a web app built with the
+              <i>React</i> framework which allows you (among several other
+              options) to log in, choose among a database of products adding
+              them to a cart and eventually simulating a purchase trough card
+              payment. The <i>Comfy Slot</i> project as well as the
+              <i>Job Tracker</i>, <i>Github Users</i> and
+              <i>Cocktails Set</i> project are academic works created during my
+              <i>web developer</i> courses.
             </p>
             <div class="project-page-footer">
               <i class="fa-brands fa-github"></i>
-              <p>source code</p>
+
+              <a href="https://github.com/Franek-86/comfy-store-sloth">
+                source code</a
+              >
             </div>
           </div>
         </article>
         <article class="project-page-single">
           <div class="project-page-img">
-            <img src="./images/pic-3.jpg" alt="" class="project-page-pic" />
-            <span class="page-icon">
-              <i class="fa-solid fa-house-chimney"></i>
-            </span>
+            <img src="./images/pic4.jpg" alt="" class="project-page-pic" />
+            <a href="https://cocktails-set.netlify.app" target="_blank">
+              <span class="page-icon">
+                <i class="fa-solid fa-house-chimney"></i>
+              </span>
+            </a>
           </div>
           <div class="project-page-info">
-            <h4>project name</h4>
+            <h4>cocktails set</h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
-              eaque fuga distinctio reiciendis optio blanditiis non laborum
-              totam harum repudiandae.
+              <i>Cocktails Set</i> is a web app built with the
+              <i>React</i> framework which allows you to search for a specific
+              cocktail and see it's specifics. The <i>Cocktails Set</i> project
+              as well as the <i>Job Tracker</i>, <i>Github Users</i> and
+              <i>Comfy Slot</i> project are academic works created during my
+              <i>web developer</i> courses.
             </p>
             <div class="project-page-footer">
               <i class="fa-brands fa-github"></i>
-              <p>source code</p>
+
+              <a href="https://github.com/Franek-86/Coctails_DB">
+                source code</a
+              >
+            </div>
+          </div>
+        </article>
+        <article class="project-page-single">
+          <div class="project-page-img">
+            <img src="./images/pictea.jpg" alt="" class="project-page-pic" />
+            <a href="https://jumbo-colombian-tea.netlify.app" target="_blank">
+              <span class="page-icon">
+                <i class="fa-solid fa-house-chimney"></i>
+              </span>
+            </a>
+          </div>
+          <div class="project-page-info">
+            <h4>jumbo colombian tea</h4>
+            <p>
+              What's your favorite cup of tea? This project is part of my
+              <i>"Jumbo series"</i> which includes also "Jumbo Clubs" and "Jumbo
+              Coffee Blend". The <i>"Jumbo series"</i> has been conceived for
+              academic purposes therefore is presenting products of fantasy.
+            </p>
+            <div class="project-page-footer">
+              <i class="fa-brands fa-github"></i>
+
+              <a href="https://github.com/Franek-86/jumbo_tea"> source code</a>
+            </div>
+          </div>
+        </article>
+        <article class="project-page-single">
+          <div class="project-page-img">
+            <img src="./images/picmath.jpg" alt="" class="project-page-pic" />
+            <a
+              href="https://technical-doc-template.netlify.app"
+              target="_blank"
+            >
+              <span class="page-icon">
+                <i class="fa-solid fa-house-chimney"></i>
+              </span>
+            </a>
+          </div>
+          <div class="project-page-info">
+            <h4>technical document template</h4>
+            <p>
+              A full responsive webpage template created for showing technical
+              instructions.
+            </p>
+            <div class="project-page-footer">
+              <i class="fa-brands fa-github"></i>
+
+              <a href="https://github.com/Franek-86/technical_doc_template">
+                source code</a
+              >
+            </div>
+          </div>
+        </article>
+        <article class="project-page-single">
+          <div class="project-page-img">
+            <img src="./images/track.jpg" alt="" class="project-page-pic" />
+            <a href="https://the-job-tracker.netlify.app" target="_blank">
+              <span class="page-icon">
+                <i class="fa-solid fa-house-chimney"></i>
+              </span>
+            </a>
+          </div>
+          <div class="project-page-info">
+            <h4>job tracker</h4>
+            <p>
+              <i>Job Tracker</i> is a web app built with the
+              <i>React</i> framework which allows you (among several other
+              options) to keep trace of your scheduled interviews, pending
+              applications as well as jobs declined.. The
+              <i>Job Tracker</i> project as well as the <i>Comfy Slot</i>,
+              <i>Github Users</i> and <i>Cocktails Set</i> project are academic
+              works created during my <i>web developer</i> courses.
+            </p>
+            <div class="project-page-footer">
+              <i class="fa-brands fa-github"></i>
+
+              <a href="https://github.com/Franek-86/Jobster"> source code</a>
+            </div>
+          </div>
+        </article>
+        <article class="project-page-single">
+          <div class="project-page-img">
+            <img src="./images/git.jpg" alt="" class="project-page-pic" />
+            <a href="https://get-git-hub-users.netlify.app" target="_blank">
+              <span class="page-icon">
+                <i class="fa-solid fa-house-chimney"></i>
+              </span>
+            </a>
+          </div>
+          <div class="project-page-info">
+            <h4>github users</h4>
+            <p>
+              <i>Github Users</i> is a web app built with the
+              <i>React</i> framework which allows you, after logging in, to
+              search for a github user and see some of his statistics (eg.
+              Repos, Followers exc). The <i>Github Users</i> project as well as
+              the <i>Comfy Slot</i>, <i>Job Tracker</i> and
+              <i>Cocktails Set</i> project are academic works created during my
+              <i>web developer</i> courses.
+            </p>
+            <div class="project-page-footer">
+              <i class="fa-brands fa-github"></i>
+
+              <a href="https://github.com/Franek-86/git_Hub_Users">
+                source code</a
+              >
             </div>
           </div>
         </article>
       </div>
     </section>
+
     <footer class="footer">
       <div class="footer-center">
         <ul class="sidebar-icons">
           <li class="sidebar-icon">
-            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.facebook.com//FranekDev"
+              ><i class="fa-brands fa-facebook"></i
+            ></a>
           </li>
           <li class="sidebar-icon">
-            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/franekDev"
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
           </li>
           <li class="sidebar-icon">
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.instagram.com/franekdev/"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
           </li>
         </ul>
-        <p>&copy; test test all rights reserved</p>
+        <p>&copy; FranekDev all rights reserved</p>
       </div>
     </footer>
   </body>
