added winMe and changed favicon

--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
       rel="stylesheet"
       href="./fontawesome-free-6.2.1-web/css/all.min.css"
     />
-    <link
-      rel="shortcut icon"
-      href="./favicon_io (1)/favicon-16x16.png"
-      type="image/x-icon"
-    />
+<link rel="apple-touch-icon" sizes="180x180" href="./favicon_io/android-chrome-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
     <title>portfolio</title>
   </head>
   <body>
@@ -192,14 +191,14 @@ Deep care of the overall style of your app combined with the focus on the actual
           </div>
         </article>
         </a>
-         <a href="https://the-coffee-blend.netlify.app" target="_blank"  class="area area-2">
+         <a href="https://wine-me.netlify.app/" target="_blank"  class="area area-2">
         <article class="single-work">
           <div class="single-work-img">
-           <img src="./images/pic2.jpg" alt="" class="single-work-pic">
+           <img src="./images/winMe.jpg" alt="" class="single-work-pic">
           </div>
           <div class="single-work-info">
                <div class="info-content">
-           <h4>Jumbo Coffee</h4>
+           <h4>WinMe</h4>
       
 
                 </div>
@@ -267,7 +266,7 @@ Deep care of the overall style of your app combined with the focus on the actual
       <div class="section-center timeline-center">
         <article class="single-timeline">
           <h4>2023</h4>
-          <p>Freelance FRONT END DEVELOPER</p>
+          <p>Freelance FRONT-END DEVELOPER</p>
           <span class="timeline-number">1</span>
         </article>
 
