--- a/projects.html
+++ b/projects.html
@@ -10,10 +10,23 @@
       href="./fontawesome-free-6.2.1-web/css/all.min.css"
     />
     <link
-      rel="shortcut icon"
-      href="./favicon_io (1)/favicon-16x16.png"
-      type="image/x-icon"
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./favicon_io/android-chrome-192x192.png"
     />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicon_io/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favicon_io/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/site.webmanifest" />
     <title>About Page</title>
   </head>
   <body>
@@ -92,6 +105,30 @@
     </header>
     <section class="section">
       <div class="section-center project-page-center">
+        <article class="project-page-single">
+          <div class="project-page-img">
+            <img src="./images/winMe.jpg" alt="" class="project-page-pic" />
+            <a href="https://wine-me.netlify.app" target="_blank">
+              <span class="page-icon">
+                <i class="fa-solid fa-house-chimney"></i>
+              </span>
+            </a>
+          </div>
+          <div class="project-page-info">
+            <h4>WineMe</h4>
+            <p>
+              A project built with the purpose of creating a
+              <i>form</i> template made of all possible types of form inputs.
+              Help out improving the <i>WineMe</i> service by filling out the
+              <i>WineMe</i> survey form.
+            </p>
+            <div class="project-page-footer">
+              <i class="fa-brands fa-github"></i>
+
+              <a href="https://github.com/Franek-86/WinMe"> source code</a>
+            </div>
+          </div>
+        </article>
         <article class="project-page-single">
           <div class="project-page-img">
             <img src="./images/pic1.jpg" alt="" class="project-page-pic" />
