--- a/contact.html
+++ b/contact.html
@@ -10,10 +10,23 @@
       href="./fontawesome-free-6.2.1-web/css/all.min.css"
     />
     <link
-      rel="shortcut icon"
-      href="./favicon_io (1)/favicon-16x16.png"
-      type="image/x-icon"
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./favicon_io/android-chrome-192x192.png"
     />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicon_io/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favicon_io/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/site.webmanifest" />
     <title>contact</title>
   </head>
   <body>
