--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <div class="underline"></div>
           <h1>I'm Franek</h1>
           <p>Freelance Web Developer</p>
-          <button class="btn"><a href="./contact.html">hire me</a></button>
+          <button class="btn" onclick="location.href='contact.html'">hire me</button>
           <ul class="sidebar-icons banner-icons">
             <li class="sidebar-icon">
               <a href="https://www.facebook.com//FranekDev" target="_blank"><i class="fa-brands fa-facebook"></i></a>
@@ -121,7 +121,7 @@ Hi all! I am Francesco Leccese but you can call me Franek. I am a brand new <i>F
           <p>
 In have a passion for technology and visual arts, especially photography and design. I am also a Thai food lover and a discreet traveler.
           </p>
-          <button class="btn">about me</button>
+          <button class="btn" onclick="location.href='about.html'">about me</button>
         </article>
       </div>
     </div>
@@ -248,7 +248,7 @@ Deep care of the overall style of your app combined with the focus on the actual
     </div>
     <p>
   Want to work together or have any questions? I look forward to here from you.</p>
-    <button class="btn"><a href="./contact.html">contact me</a> </button>
+    <button class="btn" onclick="location.href='contact.html'">contact me</button>
   </div>
 
 </div>
