--- a/about.html
+++ b/about.html
@@ -103,14 +103,15 @@
       </div>
       <div class="section-center">
         <p class="page-text">
-          Hello, I am Francesco Leccese and I am a web developer. I live and
-          work between Italy and Poland. I spend most of my day experimenting
-          with HTML, CSS, JavaScript and its React framework. I enjoy coding and
-          the challenge of learning something new everyday. You can also find me
-          on Linkedin
+          Hello, I am Francesco Leccese and I am a Front-End developer. I live
+          and work between Italy and Poland. I spend most of my day
+          experimenting with HTML, CSS, JavaScript and its React framework. I
+          enjoy coding and the challenge of learning something new everyday. You
+          can also find me on Linkedin
           <a
             class="page-link"
-            href="https://https://www.linkedin.com/in/franekDev/"
+            href="https://www.linkedin.com/in/franekdev"
+            target="_blank"
             >@FranekDev</a
           >
         </p>
@@ -121,17 +122,17 @@
       <div class="footer-center">
         <ul class="sidebar-icons">
           <li class="sidebar-icon">
-            <a href="https://www.facebook.com//FranekDev"
+            <a href="https://www.facebook.com//FranekDev" target="_blank"
               ><i class="fa-brands fa-facebook"></i
             ></a>
           </li>
           <li class="sidebar-icon">
-            <a href="https://www.linkedin.com/in/franekDev"
+            <a href="https://www.linkedin.com/in/franekDev" target="_blank"
               ><i class="fa-brands fa-linkedin"></i
             ></a>
           </li>
           <li class="sidebar-icon">
-            <a href="https://www.instagram.com/franekdev/"
+            <a href="https://www.instagram.com/franekdev/" target="_blank"
               ><i class="fa-brands fa-instagram"></i
             ></a>
           </li>
