--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
           <h2>about</h2>
           <div class="underline"></div>
           <p>
-Hi all! I am Francesco Leccese but you can call me Franek. I am a brand new <i>Front End Developer</i>  based in Italy with <i>Marketing and Communication</i> studies and six years of experience providing IT services for customers geographically dispersed all over the world. 
+Hi all! I am Francesco Leccese but you can call me Franek. I am a <i>Front-End Developer</i>  based in Italy with <i>Marketing and Communication</i> studies and six years of experience providing IT services for customers geographically dispersed all over the world. 
 
           </p>
           <p>
-In have a passion for technology and visual arts, especially photography and design. I am also a Thai food lover and a discreet traveler.
+In have a passion for technology and visual arts, especially photography and design.
           </p>
           <button class="btn" onclick="location.href='about.html'">about me</button>
         </article>
@@ -174,7 +174,7 @@ Deep care of the overall style of your app combined with the focus on the actual
       <div class="section-title">
         <h2>latest works</h2>
         <div class="underline"></div>
-        <p class="latest-works-text">Here below you can find some of my latest works and many more are stored in my <a class="cc" href="./projects.html">projects page</a> where you can also find the <i>source code</i> of each one of them. As a brand new <i>Front End Developer</i> most of my projects are still assignment received during my courses.</p>
+        <p class="latest-works-text"> As a brand new <i>Front End Developer</i> most of my projects are still assignment received during my code camps, presenting products of fantasy merely for academic purpose. Here below you can find some of my latest works and many more are stored in my <a class="cc" href="./projects.html">projects page</a> where you can also find their <i>source code</i>. </p>
       </div>
       <div class=" latest-works-center">
         <a href="https://jumbo-clubs.netlify.app" target="_blank" class="area area-1">
