added Saint Nicholas

--- a/index.html
+++ b/index.html
@@ -177,7 +177,21 @@ Deep care of the overall style of your app combined with the focus on the actual
         <p class="latest-works-text"> As a brand new <i>Front End Developer</i> most of my projects are still assignment received during my code camps, presenting products of fantasy merely for academic purpose. Here below you can find some of my latest works and many more are stored in my <a class="cc" href="./projects.html">projects page</a> where you can also find their <i>source code</i>. </p>
       </div>
       <div class=" latest-works-center">
-        <a href="https://jumbo-clubs.netlify.app" target="_blank" class="area area-1">
+        <a href="road-to-saint-nicholas.netlify.app" target="_blank" class="area area-1">
+        <article class="single-work">
+          <div class="single-work-img">
+           <img src="./images/saint.jpg" alt="" class="single-work-pic">
+          </div>
+          <div class="single-work-info">
+             <div class="info-content">
+           <h4>Road To Saint Nicholas</h4>
+
+</p>
+           </div>
+          </div>
+        </article>
+        </a>
+        <a href="https://jumbo-clubs.netlify.app" target="_blank" class="area area-2">
         <article class="single-work">
           <div class="single-work-img">
            <img src="./images/pic1.jpg" alt="" class="single-work-pic">
@@ -191,7 +205,7 @@ Deep care of the overall style of your app combined with the focus on the actual
           </div>
         </article>
         </a>
-         <a href="https://wine-me.netlify.app/" target="_blank"  class="area area-2">
+         <a href="https://wine-me.netlify.app/" target="_blank"  class="area area-3">
         <article class="single-work">
           <div class="single-work-img">
            <img src="./images/winMe.jpg" alt="" class="single-work-pic">
@@ -205,7 +219,7 @@ Deep care of the overall style of your app combined with the focus on the actual
           </div>
         </article>
         </a>
-         <a href="https://jumbo-colombian-tea.netlify.app" target="_blank" class="area area-3">
+         <a href="https://jumbo-colombian-tea.netlify.app" target="_blank" class="area area-4">
         <article class="single-work">
           <div class="single-work-img">
            <img src="./images/pictea.jpg" alt="" class="single-work-pic">
@@ -219,7 +233,7 @@ Deep care of the overall style of your app combined with the focus on the actual
           </div>
         </article>
         </a>
-         <a href="https://cocktails-set.netlify.app" target="_blank" class="area area-4">
+         <a href="https://cocktails-set.netlify.app" target="_blank" class="area area-5">
         <article class="single-work">
           <div class="single-work-img">
            <img src="./images/pic4.jpg" alt="" class="single-work-pic">
