--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ Deep care of the overall style of your app combined with the focus on the actual
       <div class="section-title">
         <h2>latest works</h2>
         <div class="underline"></div>
-        <p class="latest-works-text"> As a brand new <i>Front End Developer</i> most of my projects are still assignment received during my code camps, presenting products of fantasy merely for academic purpose. Here below you can find some of my latest works and many more are stored in my <a class="cc" href="./projects.html">projects page</a> where you can also find their <i>source code</i>. </p>
+        <p class="latest-works-text"> As a brand new <i>Front End Developer</i> most of my projects are still assignment received during my code camps, presenting products of fantasy merely for academic purposes. Here below you can find some of my latest works and many more are stored in my <a class="cc" href="./projects.html">projects page</a> where you can also find their <i>source code</i>. </p>
       </div>
       <div class=" latest-works-center">
         <a href="road-to-saint-nicholas.netlify.app" target="_blank" class="area area-1">
