--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@ Deep care of the overall style of your app combined with the focus on the actual
           </div>
         </article>
         </a>
+
          <a href="https://jumbo-colombian-tea.netlify.app" target="_blank" class="area area-4">
         <article class="single-work">
           <div class="single-work-img">
@@ -245,6 +246,20 @@ Deep care of the overall style of your app combined with the focus on the actual
       
 
                 </div>
+          </div>
+        </article>
+        </a>
+                         <a href="https://cocktails-table.netlify.app" target="_blank" class="area area-6">
+        <article class="single-work">
+          <div class="single-work-img">
+           <img src="./images/cocktail-table.jpg" alt="" class="single-work-pic">
+          </div>
+          <div class="single-work-info">
+            <div class="single-work-text">
+                   <div class="info-content">
+              <h4>cocktail table</h4>
+                   </div>
+           </div>
           </div>
         </article>
         </a>
