--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ Deep care of the overall style of your app combined with the focus on the actual
         <p class="latest-works-text"> As a brand new <i>Front End Developer</i> most of my projects are still assignment received during my code camps, presenting products of fantasy merely for academic purposes. Here below you can find some of my latest works and many more are stored in my <a class="cc" href="./projects.html">projects page</a> where you can also find their <i>source code</i>. </p>
       </div>
       <div class=" latest-works-center">
-        <a href="https://road-to-saint-nicholas.netlify.app" target="_blank" class="area area-1">
+        <a href="rtsn.netlify.app" target="_blank" class="area area-1">
         <article class="single-work">
           <div class="single-work-img">
            <img src="./images/saint.jpg" alt="" class="single-work-pic">
