--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
         <p class="page-text">
           Hello, I am Francesco Leccese and I am a Front-End developer. I live
           and work between Italy and Poland. I spend most of my day
-          experimenting with HTML, CSS, JavaScript and its React framework. I
+          experimenting with HTML, CSS, JavaScript and its React and Vue frameworks. I
           enjoy coding and the challenge of learning something new everyday. You
           can also find me on Linkedin
           <a
