--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ Deep care of the overall style of your app combined with the focus on the actual
       <div class="section-center timeline-center">
         <article class="single-timeline">
           <h4>2023</h4>
-          <p>Freelance FRONT-END DEVELOPER</p>
+          <p>Freelance FRONT-END DEVELOPER <br>Internship at Developing.it</p>   
           <span class="timeline-number">1</span>
         </article>
 
