--- a/projects.html
+++ b/projects.html
@@ -105,7 +105,7 @@
     </header>
     <section class="section">
       <div class="section-center project-page-center">
-        <article class="project-page-single">
+        <!-- <article class="project-page-single">
           <div class="project-page-img">
             <img src="./images/winMe.jpg" alt="" class="project-page-pic" />
             <a href="https://wine-me.netlify.app" target="_blank">
@@ -126,6 +126,38 @@
               <i class="fa-brands fa-github"></i>
 
               <a href="https://github.com/Franek-86/WinMe"> source code</a>
+            </div>
+          </div>
+        </article> -->
+        <article class="project-page-single">
+          <div class="project-page-img">
+            <img
+              src="./images/blues tarot-arcani maggiori-WEBSITE-01.jpg"
+              alt=""
+              class="project-page-pic"
+            />
+            <a
+              href="www.mariamartinelli.it/immagini/blues-tarots-website/index.html"
+              target="_blank"
+            >
+              <span class="page-icon">
+                <i class="fa-solid fa-house-chimney"></i>
+              </span>
+            </a>
+          </div>
+          <div class="project-page-info">
+            <h4>Blues Tarot</h4>
+            <p>
+              A project built with the purpose of promoting the photographic
+              exhibition <i>Blue Tarot</i> of the Italian photographer
+              <i>Maria Martinelli</i>. It is a two pages website, first page is
+              providing information of the exhibition, second page is a
+              multimedia photo gallery.
+            </p>
+            <div class="project-page-footer">
+              <i class="fa-brands fa-github"></i>
+
+              <a href="https://github.com/Franek-86/Maria"> source code</a>
             </div>
           </div>
         </article>
