--- a/projects.html
+++ b/projects.html
@@ -137,7 +137,7 @@
               class="project-page-pic"
             />
             <a
-              href="www.mariamartinelli.it/immagini/blues-tarots-website/index.html"
+              href="https://www.mariamartinelli.it/immagini/blues-tarot-website/index.html"
               target="_blank"
             >
               <span class="page-icon">
