--- a/projects.html
+++ b/projects.html
@@ -105,30 +105,6 @@
     </header>
     <section class="section">
       <div class="section-center project-page-center">
-        <!-- <article class="project-page-single">
-          <div class="project-page-img">
-            <img src="./images/winMe.jpg" alt="" class="project-page-pic" />
-            <a href="https://wine-me.netlify.app" target="_blank">
-              <span class="page-icon">
-                <i class="fa-solid fa-house-chimney"></i>
-              </span>
-            </a>
-          </div>
-          <div class="project-page-info">
-            <h4>WineMe</h4>
-            <p>
-              A project built with the purpose of creating a
-              <i>form</i> template made of all possible types of form inputs.
-              Help out improving the <i>WineMe</i> service by filling out the
-              <i>WineMe</i> survey form.
-            </p>
-            <div class="project-page-footer">
-              <i class="fa-brands fa-github"></i>
-
-              <a href="https://github.com/Franek-86/WinMe"> source code</a>
-            </div>
-          </div>
-        </article> -->
         <article class="project-page-single">
           <div class="project-page-img">
             <img
@@ -378,6 +354,30 @@
               <a href="https://github.com/Franek-86/git_Hub_Users">
                 source code</a
               >
+            </div>
+          </div>
+        </article>
+        <article class="project-page-single">
+          <div class="project-page-img">
+            <img src="./images/winMe.jpg" alt="" class="project-page-pic" />
+            <a href="https://wine-me.netlify.app" target="_blank">
+              <span class="page-icon">
+                <i class="fa-solid fa-house-chimney"></i>
+              </span>
+            </a>
+          </div>
+          <div class="project-page-info">
+            <h4>WineMe</h4>
+            <p>
+              A project built with the purpose of creating a
+              <i>form</i> template made of all possible types of form inputs.
+              Help out improving the <i>WineMe</i> service by filling out the
+              <i>WineMe</i> survey form.
+            </p>
+            <div class="project-page-footer">
+              <i class="fa-brands fa-github"></i>
+
+              <a href="https://github.com/Franek-86/WinMe"> source code</a>
             </div>
           </div>
         </article>
