--- a/index.html
+++ b/index.html
@@ -249,7 +249,21 @@ Deep care of the overall style of your app combined with the focus on the actual
           </div>
         </article>
         </a>
-                         <a href="https://cocktails-table.netlify.app" target="_blank" class="area area-6">
+      <a href="https://www.mariamartinelli.it/immagini/blues-tarot-website/index.html" target="_blank" class="area area-6">
+        <article class="single-work">
+          <div class="single-work-img">
+           <img src="./images/blues tarot-arcani maggiori-WEBSITE-01.jpg" alt="" class="single-work-pic">
+          </div>
+          <div class="single-work-info">
+            <div class="single-work-text">
+                   <div class="info-content">
+              <h4>blues tarots</h4>
+                   </div>
+           </div>
+          </div>
+        </article>
+        </a>
+                         <!-- <a href="https://cocktails-table.netlify.app" target="_blank" class="area area-6">
         <article class="single-work">
           <div class="single-work-img">
            <img src="./images/cocktail-table.jpg" alt="" class="single-work-pic">
@@ -262,7 +276,7 @@ Deep care of the overall style of your app combined with the focus on the actual
            </div>
           </div>
         </article>
-        </a>
+        </a> -->
       </div>
     </section>
     <section class="section contact-section">
