--- a/projects.html
+++ b/projects.html
@@ -391,12 +391,10 @@
             </a>
           </div>
           <div class="project-page-info">
-            <h4>WineMe</h4>
+            <h4>Cocktails Table</h4>
             <p>
               A project built with the purpose of creating a
-              <i>form</i> template made of all possible types of form inputs.
-              Help out improving the <i>WineMe</i> service by filling out the
-              <i>WineMe</i> survey form.
+              table of cocktails and a page illustrating details of ech one of them.
             </p>
             <div class="project-page-footer">
               <i class="fa-brands fa-github"></i>
@@ -405,6 +403,21 @@
             </div>
           </div>
         </article>
+
+        <!-- <a href="https://cocktails-table.netlify.app" target="_blank" class="area area-6">
+        <article class="single-work">
+          <div class="single-work-img">
+           <img src="./images/cocktail-table.jpg" alt="" class="single-work-pic">
+          </div>
+          <div class="single-work-info">
+            <div class="single-work-text">
+                   <div class="info-content">
+              <h4>cocktail table</h4>
+                   </div>
+           </div>
+          </div>
+        </article>
+        </a> -->
       </div>
     </section>
 
