--- a/projects.html
+++ b/projects.html
@@ -383,8 +383,12 @@
         </article>
         <article class="project-page-single">
           <div class="project-page-img">
-            <img src="./images/cocktail-table.jpg" alt="" class="project-page-pic" />
-            <a href="https://cocktails-table.netlify.app target="_blank">
+            <img
+              src="./images/cocktail-table.jpg"
+              alt=""
+              class="project-page-pic"
+            />
+            <a href="https://cocktails-table.netlify.app" target="_blank">
               <span class="page-icon">
                 <i class="fa-solid fa-house-chimney"></i>
               </span>
@@ -393,13 +397,15 @@
           <div class="project-page-info">
             <h4>Cocktails Table</h4>
             <p>
-              A project built with the purpose of creating a
-              table of cocktails and a page illustrating details of ech one of them.
+              A project built with the purpose of creating a table of cocktails
+              and a page illustrating details of ech one of them.
             </p>
             <div class="project-page-footer">
               <i class="fa-brands fa-github"></i>
 
-              <a href="https://github.com/Franek-86/cocktails_table"> source code</a>
+              <a href="https://github.com/Franek-86/cocktails_table">
+                source code</a
+              >
             </div>
           </div>
         </article>
